# event-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  consumer.py  main.py
app/api/: admin.py  analytics.py  errors.py  events.py  slack_events.py  sms_events.py  ui.py
app/database/: __init__.py  config.py  engine.py  migrations.py  session.py
app/integrations/: slack.py  twilio.py
app/llm/: client.py  conversation.py  general_conversation.py  insights.py
app/mcp/: __main__.py  server.py
app/middleware/: auth.py
app/models/: __init__.py  anomaly.py  conversation.py  error.py  event.py  insight.py  metric.py  notification.py  tenant.py  tenant_kafka_settings.py  trend.py
app/schemas/: analytics.py  error.py  event.py  tenant_kafka_settings.py
app/security/: encryption.py
app/services/: anomaly.py  baseline.py  conversation.py  error_ingestion.py  event_ingestion.py  insight.py  metrics.py  notification.py  property_metrics.py  trend.py
app/templates/: base.html  chat.html  dashboard.html  index.html  tenant.html
app/workers/: kafka_consumer.py  metric_worker.py
event-db-setup-scripts/: .gitignore  01_schema.sql
scripts/: seed.py
tests/: conftest.py
tests/integration/: test_analytics_api.py  test_anomaly_service.py  test_baseline_service.py  test_conversation_learning.py  test_conversation_service.py  test_errors_api.py  test_events_api.py  test_insight_service.py  test_kafka_settings_ui.py  test_metrics_service.py  test_notification_service.py  test_property_metrics_service.py  test_trend_service.py
tests/unit/: test_anomaly_service.py  test_encryption.py  test_error_ingestion.py  test_kafka_consumer.py  test_llm_client.py  (+4 more)
(+16 files in other folders)
